change verb docs to use fern ParamField

--- a/fern/docs/pages/get-started/support.mdx
+++ b/fern/docs/pages/get-started/support.mdx
@@ -5,7 +5,7 @@ subtitle: Let us help you get the most out of jambonz
 
 If you're intending to deploy a self-hosted jambonz system, it is no doubt going to play a critical role in the success of your business. 
 It makes sense to team up with the people that built 
-the platform and know it best.  
+the platform and who know it best.  
 
 Let us - the experts - help you design, deploy, tune and mainain your jambonz platform.  Email us 
 with your needs at support@jambonz.org to get a quote.
