--- a/fern/docs/pages/verbs/lex.mdx
+++ b/fern/docs/pages/verbs/lex.mdx
@@ -1,7 +1,6 @@
 ---
 title: Lex
 subtitle: connects a call to an [Amazon Lex](https://aws.amazon.com/lex/) V2 bot. 
-hide-toc: true
 ---
 
 ```json
@@ -35,6 +34,84 @@ hide-toc: true
 }
 ```
 
+## Parameters
+
+<ParamField path="botAlias" type="string" required={true}>
+  Lex bot alias ID.
+</ParamField>
+
+<ParamField path="botId" type="string" required={true}>
+  Lex bot ID.
+</ParamField>
+
+<ParamField path="credentials" type="object" required={true}>
+  AWS credentials.
+</ParamField>
+
+<ParamField path="credentials.accessKey" type="string" required={true}>
+  AWS access key ID.
+</ParamField>
+
+<ParamField path="credentials.secretAccessKey" type="string" required={true}>
+  AWS secret access key ID.
+</ParamField>
+
+<ParamField path="eventHook" type="string" required={false}>
+  A webhook to invoke when a Lex event occurs (e.g., intent detected, transcription, etc.).
+</ParamField>
+
+<ParamField path="intent" type="string" required={false}>
+  Initial intent to trigger (i.e., "welcome intent").
+</ParamField>
+
+<ParamField path="locale" type="string" required={true}>
+  Language code of the speaker.  
+  Currently supported languages: `en_AU`, `en_GB`, `en_US`, `fr_CA`, `fr_FR`, `es_ES`, `es_US`, `it_IT`.
+</ParamField>
+
+<ParamField path="metadata" type="object" required={false}>
+  Initial slot values and context data.
+</ParamField>
+
+<ParamField path="metadata.context" type="object" required={false}>
+  Key-value pairs for context data to pass to the Lex bot.
+</ParamField>
+
+<ParamField path="metadata.slots" type="object" required={false}>
+  Key-value pairs for slot names and initial values to be pre-filled.
+</ParamField>
+
+<ParamField path="metadata['x-amz-lex:channels:platform']" type="string" required={false}>
+  Name of the voice platform.
+</ParamField>
+
+<ParamField path="noInputTimeout" type="number" required={false}>
+  Timeout in milliseconds Lex will wait for a response before triggering a fallback intent.
+</ParamField>
+
+<ParamField path="region" type="string" required={true}>
+  AWS region where the bot is running.
+</ParamField>
+
+<ParamField path="tts" type="object" required={false}>
+  If provided, playback will use text-to-speech rather than Lex-generated audio.
+</ParamField>
+
+<ParamField path="tts.language" type="string" required={false}>
+  Language identifier or `default`.
+</ParamField>
+
+<ParamField path="tts.vendor" type="string" required={false}>
+  `'aws'`, `'Google'`, or `'default'`.
+</ParamField>
+
+<ParamField path="tts.voice" type="string" required={false}>
+  Voice identifier or `default`.
+</ParamField>
+
+<ParamField path="welcomeMessage" type="string" required={false}>
+  Text for a welcome message to play to the caller.
+</ParamField>
  The following features are supported:
 
 - optionally specify an initial, or "welcome" intent,
@@ -43,31 +120,12 @@ hide-toc: true
 - play lex-generated audio, or use text-to-speech with either AWS/Polly or Google voices,
 - receive real-time notifications of intents and transcriptions as the conversation progresses, and
 - provide arbitrary context data to the lex backend to help guide the flow.
-You can use the following options in the `lex` verb:
 
-| option        | description | required  |
-| ------------- |-------------| -----|
-| botId | Lex bot ID | yes |
-| botAlias | Lex bot alias ID | yes |
-| credentials | AWS credentials | yes |
-| credentials.accessKey | AWS access key id | yes |
-| credentials.secretAccessKey | AWS secret access key id | yes |
-| region | AWS region bot is running in | yes |
-| locale | language code of speaker (currently supported languages:<br/> en_AU, en_GB, en_US, fr_CA, fr_FR, es_ES, es_US, it_IT)| yes |
-| eventHook | A webhook to invoke when a Lex event occurs (e.g intent detected, transcription, etc) | no | 
-| intent | initial intent to trigger (i.e. "welcome intent") | no |
-| welcomeMessage | text for a welcome message to play to the caller | no |
-| noInputTimeout | timeout in millseconds Lex will wait for a response before triggering fallback intent | no |
-| tts | if provided, playback will use text-to-speech rather than Lex-generated audio | no |
-| tts.vendor | 'aws', 'Google', or 'default' | no |
-| tts.language | language identifier or 'default' | no |
-| tts.voice | voice identifier or 'default' | no |
-| metadata | initial slot values and context data | no |
-| metadata.slots | key-value pairs for slot names and initial values to be pre-filled | no |
-| metadata.context | key-value pairs for context data to pass to Lex bot | no |
-| metadata['x-amz-lex:channels:platform'] | name of voice platform | no |
+#### eventHook properties
 
-The *eventHook* webhook will contain two parameters: `event` and `data`.  The `event` parameter identifies the specific event and the `data` parameter is an object containng event data associated with the event.  The following events are supported:
+The *eventHook* webhook will contain two parameters: `event` and `data`. 
+The `event` parameter identifies the specific event and the `data` parameter is an object 
+containng event data associated with the event.  The following events are supported:
 
 - `intent`: Lex detected an intent
 - `transcription`: a speech transcription was returned from Lex
