--- a/fern/docs/pages/verbs/config.mdx
+++ b/fern/docs/pages/verbs/config.mdx
@@ -1,7 +1,6 @@
 ---
 title: Config
 subtitle: Modifies one or more aspects of the current session and continues immediately with the next verb in the application.
-hide-toc: true
 ---
 
 <Note>
@@ -26,38 +25,132 @@ The `config` verb is non-blocking.
     }
 }
 ```
+## Parameters
 
-| option        | description | required  |
-| ------------- |-------------| -----|
-| amd|enable answering machine detection; see [answering machine detection](/guides/features/answering-machine-detection) for details.|no|
-| actionHookDelayAction|object, see [here](/guides/features/handling-action-hook-delays) for details.|no|
-| bargein|this object contains properties that are used to instantiate a 'background' [gather verb](/verbs/verbs/gather).|no|
-| bargeIn.enable| if true, begin listening for speech or dtmf input while the session is executing other verbs.  This is known as a "background gather" and an application to capture user input outside of a [gather verb](/verbs/verbs/gather).  If false, stop any background listening task that is in progress.| no|
-| bargeIn.sticky | If true and bargeIn.enable is true, then when the background gather completes with speech or dtmf detected, it will automatically start another background gather.|no|
-| bargeIn.actionHook | A webhook to call if user input is collected from the background gather.| no |
-| bargeIn.input |Array, specifying allowed types of input: ['digits'], ['speech'], or ['digits', 'speech']. | yes |
-| bargeIn.finishOnKey | Dmtf key that signals the end of dtmf input. | no |
-| bargeIn.numDigits | Exact number of dtmf digits expected to gather. | no |
-| bargeIn.minDigits | Minimum number of dtmf digits expected to gather.  Defaults to 1. | no |
-| bargeIn.maxDigits | Maximum number of dtmf digits expected to gather. | no |
-| bargeIn.interDigitTimeout | Amount of time to wait between digits after minDigits have been entered.| no |
-| boostAudioSignal| A string or integer value indicating the number of decibels to boost or reduce the strength of the outgoing audio signal to the caller/called party, e.g. "-6 dB". Note this applies to the main track only, not to any [dub](/verbs/verbs/dub) tracks.| no |
-| fillerNoise | play audio to the caller while the remote application is processing gather transcriptions. This is a session-wide setting that may be overridden at the [gather verb](/verbs/verbs/gather) level. See [Using filler noise](/guides/features/filler-noise) for more details.| no |
-| fillerNoise.enable | boolean, whether to enable or disable filler noise | yes |
-| fillerNoise.url | http(s) audio to play as filler noise | yes |
-| fillerNoise.startDelaySecs | integer value specifying number of seconds to wait for a response from the remote application before playing filler noise | no (default: play immediately after sending results) |
-| listen | a nested [listen](/verbs/verbs/listen) action, which allows recording of the call from this point forward by streaming the audio to a remote server over a websocket connection | no |
-| notifyEvents | boolean, whether to enable event notifications (verb:status messages) over websocket connections.  Verbs that are sent over the websocket must also contain an "id" property to activate this feature.|no|
-| onHoldMusic | string, provides the URL to a remote music source to use when a call is placed on hold|no|
-| recognizer | change the session-level default speech recognition settings. See [the transcribe verb](/verbs/verbs/transcribe) for details on the `recognizer` property.| no |
-| reset | string or array, resets either 'recognizer' and/or 'synthesizer' to the default application settings|no| 
-| record|options to manage [call recording using SIPREC](/guides/features/siprec-client)|no|
-| record.action|"startCallRecording", "stopCallRecording", "pauseCallRecording", or "resumeCallRecording"|yes|
-| record.siprecServerURL|sip uri for SIPREC server|required if action is "startCallRecording"|
-| record.recordingID|user-supplied string to identify the recording|no|
-| transcribe| a nested [transcribe](/verbs/verbs/transcribe) action, which allows a transcription of the call to be sent in the background | no |
-| transcribe.enable| boolean, if true start the transcribe, if false stop it | yes |
-| transcribe.transcriptionHook| the webhook/websocket identifier to send transcriptions to | yes if enabling transcription |
-| transcribe.recognizer| [recognizer](/verbs/verbs/recognizer) options | no |
-| sipRequestWithinDialogHook|object or string, a webhook to call when a sip request is received within the dialog (e.g. an INFO, NOTIFY, or REFER)|no|
-| synthesizer | change the session-level default text-to-speech settings. See [the say verb](/verbs/verbs/say) for details on the `synthesizer` property.| no |
+<ParamField path="amd" type="boolean" required={false}>
+  enable answering machine detection; see [answering machine detection](/guides/features/answering-machine-detection) for details.
+</ParamField>
+
+<ParamField path="actionHookDelayAction" type="object" required={false}>
+  object, see [here](/guides/features/handling-action-hook-delays) for details.
+</ParamField>
+
+<ParamField path="bargeIn" type="object" required={false}>
+  this object contains properties that are used to instantiate a 'background' [gather verb](/verbs/verbs/gather).
+</ParamField>
+
+<ParamField path="bargeIn.enable" type="boolean" required={false}>
+  if true, begin listening for speech or dtmf input while the session is executing other verbs. This is known as a "background gather" and an application to capture user input outside of a [gather verb](/verbs/verbs/gather). If false, stop any background listening task that is in progress.
+</ParamField>
+
+<ParamField path="bargeIn.sticky" type="boolean" required={false}>
+  If true and bargeIn.enable is true, then when the background gather completes with speech or dtmf detected, it will automatically start another background gather.
+</ParamField>
+
+<ParamField path="bargeIn.actionHook" type="string" required={false}>
+  A webhook to call if user input is collected from the background gather.
+</ParamField>
+
+<ParamField path="bargeIn.input" type="array" required={true}>
+  Array, specifying allowed types of input: ['digits'], ['speech'], or ['digits', 'speech'].
+</ParamField>
+
+<ParamField path="bargeIn.finishOnKey" type="string" required={false}>
+  Dtmf key that signals the end of dtmf input.
+</ParamField>
+
+<ParamField path="bargeIn.numDigits" type="number" required={false}>
+  Exact number of dtmf digits expected to gather.
+</ParamField>
+
+<ParamField path="bargeIn.minDigits" type="number" required={false}>
+  Minimum number of dtmf digits expected to gather. Defaults to 1.
+</ParamField>
+
+<ParamField path="bargeIn.maxDigits" type="number" required={false}>
+  Maximum number of dtmf digits expected to gather.
+</ParamField>
+
+<ParamField path="bargeIn.interDigitTimeout" type="number" required={false}>
+  Amount of time to wait between digits after minDigits have been entered.
+</ParamField>
+
+<ParamField path="boostAudioSignal" type="string | number" required={false}>
+  A string or integer value indicating the number of decibels to boost or reduce the strength of the outgoing audio signal to the caller/called party, e.g. "-6 dB". Note this applies to the main track only, not to any [dub](/verbs/verbs/dub) tracks.
+</ParamField>
+
+<ParamField path="fillerNoise" type="object" required={false}>
+  play audio to the caller while the remote application is processing gather transcriptions. This is a session-wide setting that may be overridden at the [gather verb](/verbs/verbs/gather) level. See [Using filler noise](/guides/features/filler-noise) for more details.
+</ParamField>
+
+<ParamField path="fillerNoise.enable" type="boolean" required={true}>
+  whether to enable or disable filler noise.
+</ParamField>
+
+<ParamField path="fillerNoise.url" type="string" required={true}>
+  http(s) audio to play as filler noise.
+</ParamField>
+
+<ParamField path="fillerNoise.startDelaySecs" type="number" required={false}>
+  integer value specifying number of seconds to wait for a response from the remote application before playing filler noise (default: play immediately after sending results).
+</ParamField>
+
+<ParamField path="listen" type="object" required={false}>
+  a nested [listen](/verbs/verbs/listen) action, which allows recording of the call from this point forward by streaming the audio to a remote server over a websocket connection.
+</ParamField>
+
+<ParamField path="notifyEvents" type="boolean" required={false}>
+  whether to enable event notifications (verb:status messages) over websocket connections. Verbs that are sent over the websocket must also contain an "id" property to activate this feature.
+</ParamField>
+
+<ParamField path="onHoldMusic" type="string" required={false}>
+  provides the URL to a remote music source to use when a call is placed on hold.
+</ParamField>
+
+<ParamField path="recognizer" type="object" required={false}>
+  change the session-level default speech recognition settings. See [the transcribe verb](/verbs/verbs/transcribe) for details on the `recognizer` property.
+</ParamField>
+
+<ParamField path="reset" type="string | array" required={false}>
+  resets either 'recognizer' and/or 'synthesizer' to the default application settings.
+</ParamField>
+
+<ParamField path="record" type="object" required={false}>
+  options to manage [call recording using SIPREC](/guides/features/siprec-client).
+</ParamField>
+
+<ParamField path="record.action" type="string" required={true}>
+  "startCallRecording", "stopCallRecording", "pauseCallRecording", or "resumeCallRecording".
+</ParamField>
+
+<ParamField path="record.siprecServerURL" type="string" required={true}>
+  sip uri for SIPREC server (required if action is "startCallRecording").
+</ParamField>
+
+<ParamField path="record.recordingID" type="string" required={false}>
+  user-supplied string to identify the recording.
+</ParamField>
+
+<ParamField path="transcribe" type="object" required={false}>
+  a nested [transcribe](/verbs/verbs/transcribe) action, which allows a transcription of the call to be sent in the background.
+</ParamField>
+
+<ParamField path="transcribe.enable" type="boolean" required={true}>
+  if true start the transcribe, if false stop it.
+</ParamField>
+
+<ParamField path="transcribe.transcriptionHook" type="string" required={true}>
+  the webhook/websocket identifier to send transcriptions to (required if enabling transcription).
+</ParamField>
+
+<ParamField path="transcribe.recognizer" type="object" required={false}>
+  [recognizer](/verbs/verbs/recognizer) options.
+</ParamField>
+
+<ParamField path="sipRequestWithinDialogHook" type="string | object" required={false}>
+  a webhook to call when a SIP request is received within the dialog (e.g. an INFO, NOTIFY, or REFER).
+</ParamField>
+
+<ParamField path="synthesizer" type="object" required={false}>
+  change the session-level default text-to-speech settings. See [the say verb](/verbs/verbs/say) for details on the `synthesizer` property.
+</ParamField>
