--- a/fern/docs/pages/verbs/dequeue.mdx
+++ b/fern/docs/pages/verbs/dequeue.mdx
@@ -1,7 +1,6 @@
 ---
 title: Dequeue
 subtitle: Removes the lowest priority call from a specified queue and bridges that call to the current caller.
-hide-toc: true
 ---
 
 <Note>
@@ -17,20 +16,34 @@ Calls can optionally be [enqueued](/verbs/verbs/enqueue) with priority values th
 }
 ```
 
-You can use the following options in the `dequeue` command:
+## Parameters
 
-| option        | description | required  |
-| ------------- |-------------| -----|
-| name | name of the queue | yes |
-| callSid | a specific call to dequeue; if not provided the lowest priority call or the call at the head of the queue will be dequeued | no|
-| actionHook | A webhook invoke when call ends. If no webhook is provided, execution will continue with the next verb in the current application. <br/>See below for specified request parameters.| no |
-| beep | if true, play a beep tone to this caller only just prior to connecting the queued call; this provides an auditory cue that the call is now connected | no |
-| timeout | number of seconds to wait on an empty queue before returning (default: wait forever) | no |
+<ParamField path="name" type="string" required={true}>
+  name of the queue
+</ParamField>
+
+<ParamField path="callSid" type="string" required={false}>
+  a specific call to dequeue; if not provided, the lowest priority call or the call at the head of the queue will be dequeued
+</ParamField>
+
+<ParamField path="actionHook" type="string" required={false}>
+  A webhook invoked when the call ends. If no webhook is provided, execution will continue with the next verb in the current application.  
+  See below for specified request parameters.
+</ParamField>
+
+<ParamField path="beep" type="boolean" required={false}>
+  if true, play a beep tone to this caller only just prior to connecting the queued call; this provides an auditory cue that the call is now connected
+</ParamField>
+
+<ParamField path="timeout" type="number" required={false}>
+  number of seconds to wait on an empty queue before returning (default: wait forever)
+</ParamField>
+
+### actionHook properties
 
 The *actionHook* webhook will contain a `dequeueResult` property indicating the completion reason:
 
-- 'hangup' - the bridged call was abandoned while listening to the confirmHook message
-- 'complete' - the call was successfully bridged and ended with a caller hangup
-- 'timeout' - no call appeared in the named queue during the timeout interval
-- 'error' - a system error of some kind occurred
-
+- **'hangup'** - the bridged call was abandoned while listening to the confirmHook message  
+- **'complete'** - the call was successfully bridged and ended with a caller hangup  
+- **'timeout'** - no call appeared in the named queue during the timeout interval  
+- **'error'** - a system error of some kind occurred  
