--- a/fern/docs/pages/verbs/dial.mdx
+++ b/fern/docs/pages/verbs/dial.mdx
@@ -1,7 +1,6 @@
 ---
 title: Dial
 subtitle: Create a new call by dialing out to a telephone number, a registered sip user, a sip uri, or a Microsoft Teams user.
-hide-toc: true
 ---
 
 ```json maxLines=100
@@ -52,28 +51,95 @@ There are several types of endpoints that you can dial:
 * a sip endpoint, identified by a sip uri (and possibly authentication parameters), or
 * Microsoft Teams user
 
-You can use the following attributes in the `dial` command:
+## Parameters
 
-| option        | description | required  |
-| ------------- |-------------| -----|
-| actionHook | webhook to invoke when the call ends. The webhook will include [properties](#actionhook-properties) describing the outcome of the call attempt.| no |
-|amd|enable answering machine detection; see [answering machine detection](/guides/features/answering-machine-detection) for details|no|
-| anchorMedia | if true, jambonz will not release the media from feature server for the bridged call. [See here](/guides/features/controlling-the-media-path-during-a-call) for details. Default: false | no |
-| answerOnBridge | If set to true, the inbound call will ring until the number that was dialed answers the call, and at that point a 200 OK will be sent on the inbound leg.  If false, the inbound call will be answered immediately as the outbound call is placed. <br/>Defaults to false. | no |
-| callerId | The inbound caller's phone number, which is displayed to the number that was dialed. The caller ID must be a valid E.164 number. <br/>Defaults to caller id on inbound call. | no |
-| confirmHook | webhook for an application to run on the callee's end after the dialed number answers but before the call is connected. This allows the caller to provide information to the dialed number, giving them the opportunity to decline the call, before they answer the call.  Note that if you want to run different applications on specific destinations, you can specify the 'url' property on the nested [target](#h5-target-types) object.  | no |
-| dialMusic | url that specifies a .wav or .mp3 audio file of custom audio or ringback to play to the caller while the outbound call is ringing. | no |
-| dtmfCapture | an array of strings that represent dtmf sequence which, when detected, will trigger a mid-call notification to the application via the configured `dtmfHook` | no |
-| dtmfHook | a webhook to call when a dtmfCapture entry is matched.  This is a notification only -- no response is expected, and any desired actions must be carried out via the REST updateCall API. | no|
-| dub | a nested [dub](/verbs/verbs/dub) verb to add additional audio tracks into the outbound call. | no |
-| exitMediaPath | if true, jambonz will attempt to re-invite itself completely out of the media path for the call; [see below](#exitmediapath) for details. Defaults to false| no | 
-| headers | an object containing arbitrary sip headers to apply to the outbound call attempt(s) | no |
-| listen | a nested [listen](/verbs/verbs/listen) action, which will cause audio from the call to be streamed to a remote server over a websocket connection | no |
-| referHook | webhook to invoke when an incoming SIP REFER is received on a dialed call.  If the application wishes to accept and process the REFER, the webhook application should simply return an HTTP status code 200 with no body, and jambonz will send a SIP 202 Accepted.  Otherwise, any HTTP non-success status will cause jambonz to send a SIP response to the REFER with the same status code.  <br/><br/>Note that jambonz will send the 202 Accepted and do nothing further.  It is the responsibility of the third-party application to then outdial a new call and bridge the other leg, presumably by using the REST API.  See [this example app](https://github.com/jambonz/sip-blind-transfer) for more details.| no|
-| target | array of to 10 [destinations](#target-types) to simultaneously dial. The first person (or entity) to answer the call will be connected to the caller and the rest of the called numbers will be hung up.| yes |
-| timeLimit | max length of call in seconds | no |
-| timeout | ring no answer timeout, in seconds.  <br/>Defaults to 60. | no |
-| transcribe | a nested [transcribe](/verbs/verbs/transcribe) action, which will cause the call to be transcribed | no 
+<ParamField path="actionHook" type="string" required={false}>
+  webhook to invoke when the call ends. The webhook will include [properties](#actionhook-properties) describing the outcome of the call attempt.
+</ParamField>
+
+<ParamField path="amd" type="object" required={false}>
+  enable answering machine detection; see [answering machine detection](/guides/features/answering-machine-detection) for details.
+</ParamField>
+
+<ParamField path="anchorMedia" type="boolean" required={false}>
+  if true, jambonz will not release the media from feature server for the bridged call. [See here](/guides/features/controlling-the-media-path-during-a-call) for details.  
+  Default: false.
+</ParamField>
+
+<ParamField path="answerOnBridge" type="boolean" required={false}>
+  If set to true, the inbound call will ring until the number that was dialed answers the call, and at that point a 200 OK will be sent on the inbound leg.  
+  If false, the inbound call will be answered immediately as the outbound call is placed.  
+  Defaults to false.
+</ParamField>
+
+<ParamField path="callerId" type="string" required={false}>
+  The inbound caller's phone number, which is displayed to the number that was dialed.  
+  The caller ID must be a valid E.164 number.  
+  Defaults to caller ID on inbound call.
+</ParamField>
+
+<ParamField path="confirmHook" type="string" required={false}>
+  webhook for an application to run on the callee's end after the dialed number answers but before the call is connected.  
+  This allows the caller to provide information to the dialed number, giving them the opportunity to decline the call before they answer.  
+  Note that if you want to run different applications on specific destinations, you can specify the 'url' property on the nested [target](#h5-target-types) object.
+</ParamField>
+
+<ParamField path="dialMusic" type="string" required={false}>
+  url that specifies a .wav or .mp3 audio file of custom audio or ringback to play to the caller while the outbound call is ringing.
+</ParamField>
+
+<ParamField path="dtmfCapture" type="array" required={false}>
+  an array of strings that represent DTMF sequences which, when detected, will trigger a mid-call notification to the application via the configured `dtmfHook`.
+</ParamField>
+
+<ParamField path="dtmfHook" type="string" required={false}>
+  a webhook to call when a `dtmfCapture` entry is matched.  
+  This is a notification only -- no response is expected, and any desired actions must be carried out via the REST updateCall API.
+</ParamField>
+
+<ParamField path="dub" type="object" required={false}>
+  a nested [dub](/verbs/verbs/dub) verb to add additional audio tracks into the outbound call.
+</ParamField>
+
+<ParamField path="exitMediaPath" type="boolean" required={false}>
+  if true, jambonz will attempt to re-invite itself completely out of the media path for the call; [see below](#exitmediapath) for details.  
+  Defaults to false.
+</ParamField>
+
+<ParamField path="headers" type="object" required={false}>
+  an object containing arbitrary SIP headers to apply to the outbound call attempt(s).
+</ParamField>
+
+<ParamField path="listen" type="object" required={false}>
+  a nested [listen](/verbs/verbs/listen) action, which will cause audio from the call to be streamed to a remote server over a websocket connection.
+</ParamField>
+
+<ParamField path="referHook" type="string" required={false}>
+  webhook to invoke when an incoming SIP REFER is received on a dialed call.  
+  If the application wishes to accept and process the REFER, the webhook application should return an HTTP status code 200 with no body, and jambonz will send a SIP 202 Accepted.  
+  Otherwise, any HTTP non-success status will cause jambonz to send a SIP response to the REFER with the same status code.  
+  
+  Note that jambonz will send the 202 Accepted and do nothing further. It is the responsibility of the third-party application to outdial a new call and bridge the other leg, presumably by using the REST API.  
+  See [this example app](https://github.com/jambonz/sip-blind-transfer) for more details.
+</ParamField>
+
+<ParamField path="target" type="array" required={true}>
+  array of up to 10 [destinations](#target-types) to simultaneously dial.  
+  The first person (or entity) to answer the call will be connected to the caller, and the rest of the called numbers will be hung up.
+</ParamField>
+
+<ParamField path="timeLimit" type="number" required={false}>
+  max length of call in seconds.
+</ParamField>
+
+<ParamField path="timeout" type="number" required={false}>
+  ring no answer timeout, in seconds.  
+  Defaults to 60.
+</ParamField>
+
+<ParamField path="transcribe" type="object" required={false}>
+  a nested [transcribe](/verbs/verbs/transcribe) action, which will cause the call to be transcribed.
+</ParamField>
 
 ##### target types
 
@@ -127,7 +193,7 @@ The `confirmHook` property that can be optionally specified as part of the targe
 The confirmHook allows you to easily implement call screening applications (e.g. "You have a call from so-and-so.  Press 1 to decline").
 </Note>
 
-##### actionHook properties
+#### actionHook properties
 
 The actionHook that is invoked when the dial command ends will include the following properties:
 
@@ -137,8 +203,7 @@ The actionHook that is invoked when the dial command ends will include the follo
 | dial_status | the final status of the call attempt, one of 'completed', 'failed', 'busy', 'no-answer', or 'queued'|
 | dial_sip_status | the sip status of the final response to the INVITE that was sent|
 
-<br/>
-##### amd.hook properties
+#### amd.hook properties
 
 This webhook that is invoked when amd property is included and jambonz has either determined the type of called party (human or machine) or has detected a tone or beep.
 
@@ -147,8 +212,7 @@ This webhook that is invoked when amd property is included and jambonz has eithe
 | event | one of 'amd', 'beep', or 'silence' |
 | amd_type| 'human' or 'machine', only provided when event = 'amd'|
 
-<br/>
-##### exitMediaPath
+#### exitMediaPath
 
 The purpose of the `exitMediaPath` is to support use cases where it is important that the media path not touch the jambonz system at all.  The common use case is the need to transfer a call to a human agent or credit card system where the caller will be giving their credit card details over the phone.  In order to have a PCI-Compliant transaction it is necessary that this conversation not be able to be recorded, stored, or in any way reach the jambonz system.  Performing the `dial` verb using the `exitMediaPath` property ensures this happens.
 
