--- a/fern/docs/pages/verbs/dialogflow.mdx
+++ b/fern/docs/pages/verbs/dialogflow.mdx
@@ -1,7 +1,6 @@
 ---
 title: Dialogflow
 subtitle: connect a call to a [Google Dialogflow](https://cloud.Google.com/dialogflow) bot.
-hide-toc: true
 ---
 
 ```json
@@ -16,33 +15,87 @@ hide-toc: true
 }
 ```
 
-You can use the following options in the `dialogflow` verb:
+## Parameters
 
-| option        | description | required  |
-| ------------- |-------------| -----|
-| project | the Google dialogflow project id | yes |
-| lang | language to use for speech recognition | yes |
-| credentials | the service account key in JSON string form that is used to authenticate to dialogflow | yes |
-| welcomeEvent | An event to send to dialogflow when first connecting; e.g. to trigger a welcome prompt | no |
-| welcomeEventParams | An object containing parameters to send with the welcome event | no |
-| noInputTimeout | Number of seconds of no speech detected after which to reprompt | no |
-| noInputEvent | Name of dialogflow event to send in query when no input timeout expires | no |
-| passDtmfAsTextInput | If true, pass user dtmf entries as text inputs to the dialogflow bot | no |
-| thinkingMusic | A url to a .wav or .mp3 file to play as filler music while the dialogflow back-end is executing | no |
-| actionHook | A webhook invoke when operation completes.<br/>See below for specified request parameters.| no |
-| eventHook | A webhook to invoke when a dialogflow event occurs, such as an intent being detected or a speech transcription being returned.  <br/>The response to the event hook may contain a new jambonz application to execute| no|
-| tts | if provided, audio prompts will be played using text-to-speech rather than the dialogflow-provided audio clips | no |
-| tts.vendor | speech vendor to use: Google, aws (alias: polly), or default (for application default) | no |
-| bargein | if true, kill playback immediately when user begins speaking | no|
-| tts.language | language code to use.  | yes |
-| tts.gender | (Google only) MALE, FEMALE, or NEUTRAL.  | no |
-| tts.voice | voice to use.  Note that the voice list differs whether you are using aws or Google. Defaults to application setting, if provided. | no |
+<ParamField path="actionHook" type="string" required={false}>
+  A webhook invoked when the operation completes.  
+  See below for specified request parameters.
+</ParamField>
+
+<ParamField path="bargein" type="boolean" required={false}>
+  If true, kill playback immediately when the user begins speaking.
+</ParamField>
+
+<ParamField path="credentials" type="string" required={true}>
+  The service account key in JSON string form that is used to authenticate to Dialogflow.
+</ParamField>
+
+<ParamField path="eventHook" type="string" required={false}>
+  A webhook to invoke when a Dialogflow event occurs, such as an intent being detected or a speech transcription being returned.  
+  The response to the event hook may contain a new Jambonz application to execute.
+</ParamField>
+
+<ParamField path="lang" type="string" required={true}>
+  Language to use for speech recognition.
+</ParamField>
+
+<ParamField path="noInputEvent" type="string" required={false}>
+  Name of the Dialogflow event to send in query when no input timeout expires.
+</ParamField>
+
+<ParamField path="noInputTimeout" type="number" required={false}>
+  Number of seconds of no speech detected after which to reprompt.
+</ParamField>
+
+<ParamField path="passDtmfAsTextInput" type="boolean" required={false}>
+  If true, pass user DTMF entries as text inputs to the Dialogflow bot.
+</ParamField>
+
+<ParamField path="project" type="string" required={true}>
+  The Google Dialogflow project ID.
+</ParamField>
+
+<ParamField path="thinkingMusic" type="string" required={false}>
+  A URL to a .wav or .mp3 file to play as filler music while the Dialogflow back-end is executing.
+</ParamField>
+
+<ParamField path="tts" type="object" required={false}>
+  If provided, audio prompts will be played using text-to-speech rather than the Dialogflow-provided audio clips.
+</ParamField>
+
+<ParamField path="tts.gender" type="string" required={false}>
+  (Google only) MALE, FEMALE, or NEUTRAL.
+</ParamField>
+
+<ParamField path="tts.language" type="string" required={true}>
+  Language code to use.
+</ParamField>
+
+<ParamField path="tts.vendor" type="string" required={false}>
+  Speech vendor to use: Google, AWS (alias: Polly), or default (for application default).
+</ParamField>
+
+<ParamField path="tts.voice" type="string" required={false}>
+  Voice to use. Note that the voice list differs depending on whether you are using AWS or Google. Defaults to application setting, if provided.
+</ParamField>
+
+<ParamField path="welcomeEvent" type="string" required={false}>
+  An event to send to Dialogflow when first connecting; e.g., to trigger a welcome prompt.
+</ParamField>
+
+<ParamField path="welcomeEventParams" type="object" required={false}>
+  An object containing parameters to send with the welcome event.
+</ParamField>
+
+#### actionHook properties
 
 The *actionHook* webhook will contain the following additional parameters:
 
 - `dialogflowResult`: the completion reason:
     - `redirect` - a new application was returned from an event webhook
     - `completed` - an intent with `end iteraction` set to true was received from dialogflow
+
+#### eventHook properties
 
 The *eventHook* webhook will contain two parameters: `event` and `data`.  The `event` parameter identifies the specific event and the `data` parameter is an object containng event data associated with the event.  The following events are supported:
 
@@ -69,6 +122,7 @@ Indicating a desire to transfer the call to a live agent can be done in a couple
 In either case, your application is responsible for having an eventHook that parses the intent (found in the `data` property of the webhook content) in order to check if call transfer is being requested, and if so responding with a new jambonz application.
 
 For instance, when the Dialogflow Phone Gateway Response is used (option 1 above), the code snippet below shows where to find the transfer number in the intent data provided in the eventHook.
+
 ```js
 const evt = req.body; 
 if (evt.event === 'intent') {
@@ -82,6 +136,4 @@ if (evt.event === 'intent') {
     }
 }
 ```
-
-Please refer to [this tutorial](/tutorials/#dialogflow-part-2-adding-call-transfer-functionality) for a detailed example.
 
