--- a/fern/docs/pages/verbs/leave.mdx
+++ b/fern/docs/pages/verbs/leave.mdx
@@ -1,12 +1,13 @@
 ---
-title: Hangup
+title: Leave
 subtitle: Transfers a call out of a queue
-hide-toc: true
 ---
 
-The call will return to the flow of execution following the [enqueue](/verbs/verbs/enqueue) verb that parked the call, or the document returned by that verbs *actionHook* property, if provided.
+The call will return to the flow of execution following the [enqueue](/verbs/verbs/enqueue) 
+verb that parked the call, or the document returned by that verbs *actionHook* property, 
+if provided.
 
-There are no options for the `leave` verb.
+There are no parameters for the `leave` verb.
 
 ```json
 {
