--- a/fern/docs/pages/verbs/redirect.mdx
+++ b/fern/docs/pages/verbs/redirect.mdx
@@ -1,7 +1,6 @@
 ---
 title: Redirect
 subtitle: transfer control to another JSON document that is retrieved from the specified url
-hide-toc: true
 ---
 
 <Warning>
@@ -15,9 +14,9 @@ All actions after `redirect` are unreachable and ignored.
 }
 ```
 
-You can use the following options in the `redirect` action:
+## Parameters
 
-| option        | description | required  |
-| ------------- |-------------| -----|
-| actionHook | URL of webhook to retrieve new application from.  | yes |
+<ParamField path="actionHook" type="string" required={true}>
+  URL of webhook to retrieve a new application from.
+</ParamField>
 
