--- a/fern/docs/pages/verbs/sip-decline.mdx
+++ b/fern/docs/pages/verbs/sip-decline.mdx
@@ -1,7 +1,6 @@
 ---
 title: SIP Decline
 subtitle: Reject an incoming call with a specific status
-hide-toc: true
 ---
 
 <Note>
@@ -21,11 +20,17 @@ The session ends immediately after the action is executed.
 }
 ```
 
-You can use the following options in the `sip:decline` action:
+## Parameters
 
-| option        | description | required  |
-| ------------- |-------------| -----|
-| status | a valid SIP status code in the range 4XX - 6XX | yes |
-| reason | a brief description | no (default: the well-known SIP reasons associated with the specified status code |
-| headers | SIP headers to include in the response | no
+<ParamField path="headers" type="object" required={false}>
+  SIP headers to include in the response.
+</ParamField>
 
+<ParamField path="reason" type="string" required={false}>
+  A brief description.  
+  Default: The well-known SIP reasons associated with the specified status code.
+</ParamField>
+
+<ParamField path="status" type="number" required={true}>
+  A valid SIP status code in the range `4XX - 6XX`.
+</ParamField>
