--- a/fern/docs/pages/verbs/sip-request.mdx
+++ b/fern/docs/pages/verbs/sip-request.mdx
@@ -1,7 +1,6 @@
 ---
 title: SIP Request
 subtitle: Sends a SIP INFO, NOTIFY, or MESSAGE request during a call.
-hide-toc: true
 ---
 
 ```json
@@ -15,16 +14,29 @@ hide-toc: true
 }
 ```
 
-You can use the following options in the `sip:request` action:
+## Parameters
 
-| option        | description | required  |
-| ------------- |-------------| -----|
-| method |SIP method, should be one of INFO, MESSAGE, or NOTIFY| yes |
-| headers | an object containing headers (key-value) to include with the SIP request | no |
-| body | the body of the SIP request, if any | no |
-| actionHook | a webhook to call when the sip request has completed | no |
+<ParamField path="actionHook" type="string" required={false}>
+  A webhook to call when the SIP request has completed.
+</ParamField>
 
-The sip:request verb completes when a response is received from the far end.  The actionHook provides the status code of the sip response:
+<ParamField path="body" type="string" required={false}>
+  The body of the SIP request, if any.
+</ParamField>
+
+<ParamField path="headers" type="object" required={false}>
+  An object containing headers (key-value pairs) to include with the SIP request.
+</ParamField>
+
+<ParamField path="method" type="string" required={true}>
+  SIP method, should be one of `INFO`, `MESSAGE`, or `NOTIFY`.
+</ParamField>
+
+The sip:request verb completes when a response is received from the far end. 
+
+### actionHook properties
+
+The actionHook provides the status code of the sip response:
 
 - `result`: 'success' or 'failed'
 - `sipStatus`: sip status code of response
